fix list item spacing
css was adding margin to each list item.

--- a/stylesheets/preview.css
+++ b/stylesheets/preview.css
@@ -109,7 +109,7 @@ h6 {
   font-size: 14px;
 }
 
-p, blockquote, ul, ol, dl, li, table, pre {
+p, blockquote, ul, ol, dl, table, pre {
   margin: 15px 0;
 }
 
